--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -1,9 +1,42 @@
 body{
     margin-left: 5%;
     margin-right: 5%;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    
 }
 
 h1{
+    font-family: Georgia, serif;
+    color: blue;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+h3{
+    font-family: Georgia, serif;
+    color: cadetblue;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+
+}
+legend{
+    background-color: aqua;
+    font-size: 15px;
+    font-weight: bolder;
+    font-stretch:wider;
+  
     
+}
+button{
+    text-align: center;
+    font-size: 15px;
+    padding: 5px;
+    width: 400px;
+    height: 50px;
+    align: center;
+
+
 }
