--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -20,6 +20,7 @@ h3{
     text-align: center;
     font-size: 25px;
     font-weight: bold;
+    
 
 }
 legend{
@@ -27,7 +28,7 @@ legend{
     font-size: 15px;
     font-weight: bolder;
     font-stretch:wider;
-  
+    margin-right: 70%;
     
 }
 button{
@@ -36,7 +37,35 @@ button{
     padding: 5px;
     width: 400px;
     height: 50px;
-    align: center;
+    margin-left: 32%;
+    background-color: aquamarine;
+    border: solid;
+    border-width: 3px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    color:black;
+    border-color: grey;
 
+}
 
+fieldset{
+    border-style:double;
+    border-width: 5px;
+    border-radius: 5px;
+    border-color: grey;
+    padding-bottom: 20px;
+}
+
+input:hover{
+    background-color: orangered;
+}
+
+select:hover{
+    background-color: yellow;
+}
+
+button:hover{
+    background-color: orange;
 }
